Added new activity, this will be where new data can be added to update the chosen project. The buttons on the project are a bit screwy but that's not important right now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LEAF3">
-        <activity android:name=".DataLog"></activity>
+        <activity android:name=".UpdateProject"></activity>
+        <activity android:name=".DataLog" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
