--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LEAF3">
-        <activity android:name=".UpdateProject"></activity>
+        <activity android:name=".DeleteProject"></activity>
+        <activity android:name=".UpdateProject" />
         <activity android:name=".DataLog" />
         <activity android:name=".MainActivity">
             <intent-filter>
