--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".DeleteProject"></activity>
         <activity android:name=".UpdateProject" />
         <activity android:name=".DataLog" />
+        <activity android:name=".LoadingPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
